# TP2_Reseau_Serialization

./: .gitignore  CMakeLists.txt  README.md
libSerializer/: Compressor.cpp  Compressor.h  Deserializer.cpp  Deserializer.h  Serializer.cpp  Serializer.h  mainSerialization.cpp
utils/: Enemy.cpp  Enemy.h  NetworkObject.cpp  NetworkObject.h  Player.cpp  Player.h  framework.h
